# loan-approval

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.dvc/: config
dataframes/: raw_data.dvc
dataframes/prepared/: .gitignore  loan_feature_extracted.csv.dvc
dataframes/prepared/for_linear/: .gitignore  with_target_enc.dvc  without_target_enc.dvc
dataframes/prepared/for_tree/: with_target_enc.dvc  without_target_enc.dvc
dataframes/prepared/linear/: with_target_enc.dvc
dataframes/prepared/tree/: with_target_enc.dvc
mlflow_cont/: Dockerfile
notebooks/: analysis.ipynb  experiments.ipynb  feature_preparing.ipynb  test_inference.ipynb
prometheus/: alerts.yml  prometheus.yml
src/app/: main.py
src/app/config/: __init__.py  loan_app_config.py  prometheus_config.py  s3_config.py  settings.py
src/app/metrics/: loan_approval.py
src/app/scripts/: train_model.py
src/app/utils/: data_processor.py  s3.py
src/schemas/: model_parameters.py
src/scripts/: train_model.py
src/utils/: data_processor.py  s3.py
