[project]
name = "binary-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "dotenv>=0.9.9",
    "dvc-s3>=3.3.0",
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "load-dotenv>=0.1.0",
    "mlflow>=3.10.1",
    "notebook>=7.5.5",
    "optuna>=4.8.0",
    "seaborn>=0.13.2",
    "update>=0.0.1",
    "xgboost>=3.2.0",
]
